## aclocal
## autoheader
## libtoolize
## automake --add-missing
## autoconf

## configure
## make


## Place generated object files (.o) into the same directory as their source
## files, in order to avoid collisions when non-recursive make is used.
ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
